fix(client): query text is hiding on the behind of option buttons

--- a/openmetadata-ui/src/main/resources/ui/src/components/TableQueries/table-queries.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/TableQueries/table-queries.style.less
@@ -56,3 +56,7 @@
     padding: unset;
   }
 }
+
+.sql-editor-container .CodeMirror-line {
+  padding-right: 90px !important;
+}
